# obs-multichat

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
data/locale/: en-US.ini
packaging/aur/: PKGBUILD  PUBLISHING.md
scripts/: build.sh  update.sh
src/: alerts-tab.cpp  alerts-tab.hpp  chat-tab.cpp  chat-tab.hpp  chat-types.hpp  config-manager.cpp  config-manager.hpp  html-util.hpp  loopback-auth.cpp  loopback-auth.hpp  multichat-core.cpp  multichat-core.hpp  oauth-endpoints.hpp  plugin-main.cpp  settings-dialog.cpp  settings-dialog.hpp  settings-tab.cpp  settings-tab.hpp  setup-wizard.cpp  setup-wizard.hpp  theme.hpp  token-store.cpp  token-store.hpp  twitch-client.cpp  twitch-client.hpp  youtube-client.cpp  youtube-client.hpp
